# docs/swagger.json
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/sign-in": {
+        "/signup": {
             "post": {
                 "tags": [
                     "\"auth\""
@@ -101,7 +101,7 @@
         "/tasks": {
             "get": {
                 "tags": [
-                    "\"to do\""
+                    "\"todo\""
                 ],
                 "summary": "Получить задачи",
                 "responses": {
@@ -133,7 +133,7 @@
             },
             "post": {
                 "tags": [
-                    "\"to do\""
+                    "\"todo\""
                 ],
                 "summary": "Создает задачу для пользователя",
                 "parameters": [
@@ -178,7 +178,7 @@
         "/tasks/{id}": {
             "get": {
                 "tags": [
-                    "\"to do\""
+                    "\"todo\""
                 ],
                 "summary": "Получить задачи по идентификатору",
                 "responses": {
@@ -210,7 +210,7 @@
             },
             "put": {
                 "tags": [
-                    "\"to do\""
+                    "\"todo\""
                 ],
                 "summary": "Удаляет задачу для пользователя",
                 "responses": {
